objects/BMCServiceDesk__SLA_Milestone_Task_Txn_History__c.object
<CustomObject>
    <description>Stores the Task milestones that are achieved or canceled for a service transaction.</description>
    <fields>
        <fullName>BMCServiceDesk__Action_Performed__c</fullName>
        <label>Action_Performed</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Error__c</fullName>
        <label>Error</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask_Service_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Service Target</label>
        <referenceTo>BMCServiceDesk__Task_Service_Target__c</referenceTo>
        <relationshipLabel>SLA Milestone Task History</relationshipLabel>
        <relationshipName>SLA_Milestone_Task_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>SLA Milestone Task History</relationshipLabel>
        <relationshipName>SLA_Milestone_Task_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA_Milestone_Condition__c</fullName>
        <label>SLA Milestone Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage of Time Elapsed</fullName>
                </value>
                <value>
                    <fullName>Percentage of Time Remaining</fullName>
                </value>
                <value>
                    <fullName>Service Target is Canceled</fullName>
                </value>
                <value>
                    <fullName>Service Target is Met</fullName>
                </value>
                <value>
                    <fullName>Service Target is Missed</fullName>
                </value>
                <value>
                    <fullName>Service Target Warning Occurs</fullName>
                </value>
                <value>
                    <fullName>Time Elapsed</fullName>
                </value>
                <value>
                    <fullName>Time Remaining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA_Milestone_Value__c</fullName>
        <label>SLA Milestone Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SLA Milestone Task History</label>
    <nameField>
        <label>SLA Milestone Task History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Milestone Task History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>